Fix filter padding on tablet widths (#760)

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/components/_search-and-filter.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/components/_search-and-filter.scss
@@ -58,10 +58,9 @@
 	}
 
 	ul li {
-		padding: 0;
+		padding: 0.5em 0;
 		line-height: 100%;
 		@media (min-width: 1200px) {
-			margin-bottom: 20px;
 			height: 40px;
 		}
 	}
